src/app/components/Message/styles.scss
.message-container {
  margin-top: 16%;
  margin-left: 20%;
  max-width: 80%;
  color: white;
  font-size: 4rem;
  line-height: 4rem;
  font-weight: 800;
  text-transform: uppercase;
  display: flex;
  flex-direction: column;
  font-family: inherit;
  z-index: 3;
  position: relative;
  @media (max-width: 576px) {
    margin-left: 12%;
    font-size: 3rem;
    line-height: 3.25rem;
  }
}

